[gd_scene load_steps=6 format=3 uid="uid://chiut4hjy4hel"]

[ext_resource type="Script" path="res://bola.gd" id="1_onuvj"]
[ext_resource type="Texture2D" uid="uid://cpq77x25bemc5" path="res://Imagens/Bola.png" id="1_uw7hd"]
[ext_resource type="Texture2D" uid="uid://b2nmw0vfp1cco" path="res://Imagens/pokemon1.png" id="3_7tbsj"]
[ext_resource type="Texture2D" uid="uid://i7gjg1w6u8ay" path="res://Imagens/pokemon2.png" id="4_bvky3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcppe"]
size = Vector2(30, 37)

[node name="Bola" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_onuvj")

[node name="Bola" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_uw7hd")

[node name="AreaBola" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBola"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_dcppe")

[node name="Pokemon1" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_7tbsj")

[node name="Pokemon2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_bvky3")

[connection signal="area_entered" from="AreaBola" to="." method="acertaramBola"]
